--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -1,15 +1,15 @@
 
 <footer class="footer">
     <div class="ftrtop">
-        <a href="/"><img class="col-sm-3 col-xs-8 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
-        <div class="col-sm-6 col-xs-9 mb-3">
+        <a href="/"><img class="col-sm-2 col-xs-8 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
+        <div class="col-sm-6 col-sm-offset-1 col-xs-9 mb-3">
             <ul>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
-                <li class="col-xs-4"><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
+                <li><a href="">dasdsad</a></li>
             </ul>
         </div>
         <div class="col-sm-3 col-xs-3 mb-3 social">
