--- a/templates/blocks/pages_menu.html.twig
+++ b/templates/blocks/pages_menu.html.twig
@@ -1,4 +1,4 @@
-<nav class="float-right">
+<nav class="float-right hidden-xs">
     <ul class="nav nav-pills">
         <li><a href="{{ lang.url.contact }}">Contact</a></li>
         <li><a href="{{ lang.url.about_us }}">Over ons</a></li>
