--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -1,7 +1,7 @@
 
-<footer class="footer">
+<footer id="footer" class="footer">
     <div class="ftrtop">
-        <a href="/"><img class="col-sm-2 col-xs-8 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
+        <a href="/"><img class="col-sm-2 col-xs-6 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
         <div class="col-sm-6 col-sm-offset-1 col-xs-9 mb-3">
             <ul>
                 <li><a href="">dasdsad</a></li>
