--- a/templates/layouts/layout.html.twig
+++ b/templates/layouts/layout.html.twig
@@ -37,7 +37,7 @@
 
 <!-- CONTAINER -->
 
-<div class="body">
+<div id="body" class="body">
     <div class="{{ container == true ? 'container-fluid' : 'container' }}">
         <!-- Include header.html.twig -->
         {% include 'layouts/header.html.twig' %}
