--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -1,8 +1,8 @@
 
-<footer id="footer" class="footer">
+<footer id="footer" class="footer col-xs-12">
     <div class="ftrtop">
-        <a href="/"><img class="col-sm-2 col-xs-6 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
-        <div class="col-sm-6 col-sm-offset-1 col-xs-9 mb-3">
+        <a href="/"><img class="col-md-3 col-sm-3 col-xs-6 mb-3" src="/images/logo/logo.png" alt="{% if site_name is defined %}{{ site_name }}{% endif %}"/></a>
+        <div class="col-md-6 col-sm-6 col-md-offset-1 col-xs-9 mb-3">
             <ul>
                 <li><a href="">dasdsad</a></li>
                 <li><a href="">dasdsad</a></li>
@@ -12,7 +12,7 @@
                 <li><a href="">dasdsad</a></li>
             </ul>
         </div>
-        <div class="col-sm-3 col-xs-3 mb-3 social">
+        <div class="col-md-3 col-xs-3 mb-3 social">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-google"></a>
