--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -1,6 +1,6 @@
 <div class="row header">
 
-    <div class="col-md-3 col-xs-6">
+    <div class="col-sm-3 col-xs-6">
         <span style="height:10px; display: block" aria-hidden="true">&nbsp;</span>
         <div class="push-left">
             {% if site_slug %}
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div class="col-md-5 hidden-xs">
+    <div class="col-sm-5 hidden-xs">
         <form class="form-horizontal search-products" method="get"
               action="{{ lang.url.products }}">
 
@@ -43,8 +43,8 @@
         </form>
     </div>
 
-    <div class="col-md-4 col-xs-6">
-        <div class="social hidden-xs">
+    <div class="col-sm-4 col-xs-6">
+        <div class="social hidden-xs hidden-sm">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-google"></a>
@@ -53,7 +53,7 @@
         <div class="push-right header-nav">
             <!-- Pages menu -->
             {% include 'blocks/pages_menu.html.twig' %}
-            <div class="float-clear hidden-xs"></div>
+            <div class="float-clear hidden-xs hidden-sm"></div>
 
             <div id="cart">
                 <!-- Shopping cart -->
