--- a/templates/layouts/layout.html.twig
+++ b/templates/layouts/layout.html.twig
@@ -38,7 +38,7 @@
 <!-- CONTAINER -->
 
 <div id="body" class="body">
-    <div class="{{ container == true ? 'container-fluid' : 'container' }}">
+    <div id="container" class="{{ container == true ? 'container-fluid' : 'container' }}">
         <!-- Include header.html.twig -->
         {% include 'layouts/header.html.twig' %}
 
