--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -186,6 +186,7 @@ html, body {
 .navbar {
 	border: 0;
 	margin-bottom: 0;
+	transition: top 0.2s ease-in-out;
 }
 .nav-justified {
 	max-height: none !important;
@@ -251,20 +252,20 @@ html, body {
 
 .sticky {
 	position: fixed;
-	left: 7.5%;
-	right: 7.5%;
+	/*left: 7.5%;*/
+	/*right: 7.5%;*/
 	top: 0;
 	z-index: 1000;
 }
 
 .container-fluid .sticky {
-	left: 1%;
-	right: 1%;
+	/*left: 1%;*/
+	/*right: 1%;*/
 }
 
 /* Filter box */
 .filter-box {
-	padding: 0px;
+	padding: 0;
 	margin-top: 48px;
 }
 .filter-box .panel.panel-default {
@@ -272,7 +273,7 @@ html, body {
 }
 .filter-box .panel-heading {
 	background-image: none;
-	box-shadow: 2px 0px 5px 0 #ccc;
+	box-shadow: 2px 0 5px 0 #ccc;
 }
 .filter-box .panel-title {
 	font-weight: bold;
@@ -296,9 +297,6 @@ html, body {
 	margin-top: -5px;
 }
 
-.product h3 {
-	font-weight: 600;
-}
 .product-id-table td, .product-id-table th {
 	padding: 1px;
 }
@@ -319,8 +317,7 @@ p.pdesc {
 	/*overflow: hidden;*/
 	/*text-overflow: ellipsis;*/
 	/*white-space: nowrap;*/
-	margin: 0;
-	margin-top: 5px;
+	margin: 5px 0 0 0;
 }
 p.pdescfull {
 	min-height: 73px;
@@ -332,8 +329,8 @@ p.pdescfull {
 }
 
 .contr {
-	padding: 20px;
-	padding-bottom: 100px;
+	padding: 20px 20px 100px 20px;
+	/*padding-bottom: 100px;*/
 }
 .product .stock-shipping-status {
     margin-bottom:10px;
@@ -341,8 +338,11 @@ p.pdescfull {
 .product .product-details {
 	margin-bottom: 10px;
 }
-.color {
+.product-middle {
 	padding-right:30px;
+}
+.product-middle h3 {
+	margin-top: 15px;
 }
 footer ul {
 	list-style-type: none;
@@ -357,7 +357,7 @@ footer li a {
 	padding: 5px 20px 5px 0;
 }
 .footer {
-	margin-top: 0px;
+	margin-top: 0;
 	padding-top: 19px;
 }
 .footer, .push {
@@ -377,7 +377,7 @@ footer li a {
 }
 .ftrbtm {
 	background: #f5f5f5;
-	padding-top: 0px;
+	padding-top: 0;
 	border-radius: 2px 2px 0 0;
 	border: 1px solid #ddd;
 }
@@ -387,7 +387,7 @@ footer li a {
 }
 .col-md-4 .social {
 	position: absolute;
-	padding: 5px 0px;
+	padding: 5px 0;
 	margin-left: -100px;
 }
 .fa {
@@ -396,7 +396,7 @@ footer li a {
 	width: 30px;
 	text-align: center;
 	text-decoration: none;
-	margin: 0px;
+	margin: 0;
 	border-radius: 50%;
 }
 
@@ -449,8 +449,6 @@ footer li a {
 .price {
 	color: #333;
 	margin: 0 0 10px 0;
-	font-family: "ClarendonURW-Med",Georgia,serif;
-	font-weight: 600;
 }
 
 .ftrbtm {
@@ -499,7 +497,7 @@ footer li a {
 	background: white;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 769px) {
 	.content {
 		padding-top: 52px;
 	}
@@ -511,7 +509,85 @@ footer li a {
 	}
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 768px) and (min-width: 469px) {
+	.sticky {
+		/*left: 0;*/
+		/*right: 0;*/
+	}
+	.content {
+		padding-top: 52px !important;
+	}
+    .global-search-title {
+        margin-top: 20px;
+    }
+
+    .price-box {
+        height:auto;
+        padding:10px 15px 0;
+        float: left;
+        width:100%;
+    }
+    .price-box .order {
+        width:65%;
+        float: left;
+        padding: 3px 10px;
+    }
+    .price-box .order a {
+        width: fit-content;
+    }
+    .price {
+        margin: 0 !important;
+    }
+    .small-price {
+        width: 35%;
+        float: left;
+        padding-right: 15px;
+    }
+    .small-price .price {
+        float: right;
+    }
+    .small-price p {
+        margin:0 !important;
+        float: right;
+    }
+    .product-middle {
+        padding-right: 15px;
+        width: 65%;
+        float: left;
+    }
+    .product-middle h3 {
+        margin-top: 20px;
+    }
+    .product h3 {
+        font-size: 23px;
+    }
+    .product tr {
+        float: left;
+    }
+    .product .product-desc {
+        margin-left:0 !important;
+        padding: 0 15px;
+        min-height: 270px;
+    }
+    .product img {
+        min-width: 100%;
+    }
+    .product-price {
+        height:auto;
+        margin-bottom: 20px;
+        float: right;
+    }
+    .product-image {
+        width: 35%;
+        float: left;
+        padding: 0;
+    }
+    .product-list .product-details {
+        float: left !important;
+    }
+}
+
+@media screen and (max-width: 468px) {
 	body {
 		font-size: 125%
 	}
@@ -528,7 +604,7 @@ footer li a {
 		padding: 10px 0;
 	}
 	.header #cart h3 {
-		margin:0px;
+		margin:0;
 	}
 	.slogan {
 		height: 50px;
@@ -551,6 +627,10 @@ footer li a {
 	}
 	.filter-box {
 		margin-top: 25px;
+	}
+	footer {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
 	}
 	footer ul {
 		padding:0;
@@ -591,12 +671,12 @@ footer li a {
 	.small-price p {
 		margin:0 !important;
 	}
-	.color {
+	.product-middle {
 		padding-right: 15px;
 		width: 65%;
 		float: left;
 	}
-	.color h3 {
+	.product-middle h3 {
 		margin-top: 0;
 	}
 	.product h3 {
@@ -623,37 +703,6 @@ footer li a {
 	}
 	.product-list .product-details {
 		float: left !important;
-	}
-	.product-floating-box {
-		padding: 15px;
-	}
-	.product-floating-box .price-box h3 {
-		width: 50%;
-		float: left;
-	}
-	.product-floating-box .price-box p {
-		width: 50%;
-		float: left;
-		clear: none !important;
-	}
-	.product-floating-box .price-box div {
-		float: left;
-		width: 100%;
-		margin-top:5px;
-	}
-	.product-floating-box .price-box .price {
-		font-weight:600;
-	}
-	.product-floating-box .price-box {
-		height: auto ;
-		text-align: left;
-		padding: 15px 0;
-	}
-	.product-floating-box .stock-shipping-status {
-		width: 50%;
-	}
-	.product-floating-box .color {
-		padding: 0;
 	}
 }
 
