--- a/templates/products.html.twig
+++ b/templates/products.html.twig
@@ -87,7 +87,7 @@
                          class="fill round-border box-shadow">
                 </div>
 
-                <div class="col-md-7 color">
+                <div class="col-md-7 product-middle">
                     <!-- PRODUCT TITLE -->
                     <h3><a class="product-link" href="{{ lang.url.product ~ product.name|url_encode ~ '/' ~ product.id }}">{{ product.name }}</a></h3>
 
