--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -373,7 +373,7 @@ footer li a {
 }
 .social a:focus {
 	color: #fff;
-	text-decoration: none;
+	/*text-decoration: none;*/
 }
 .ftrbtm {
 	background: #f5f5f5;
@@ -385,7 +385,7 @@ footer li a {
 	margin-bottom: 0;
 	padding: 5px 0;
 }
-.col-md-4 .social {
+.header .social {
 	position: absolute;
 	padding: 5px 0;
 	margin-left: -100px;
