--- a/templates/layouts/layout.html.twig
+++ b/templates/layouts/layout.html.twig
@@ -31,13 +31,13 @@
     {% endblock %}
 </head>
 
-<body onscroll="stickyHeader()">
+<body id="body" >
 
 <div class="colorgraph"></div>
 
 <!-- CONTAINER -->
 
-<div id="body" class="body">
+<div id="bodyContent" class="body">
     <div id="container" class="{{ container == true ? 'container-fluid' : 'container' }}">
         <!-- Include header.html.twig -->
         {% include 'layouts/header.html.twig' %}
@@ -47,6 +47,7 @@
             {% block content %}
             {% endblock %}
         </div>
+        <div class="push"></div>
     </div>
 
     <div class="push"></div>
