--- a/templates/product.html.twig
+++ b/templates/product.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <div class="product" style="margin-top: 20px">
+    <div class="product">
         <div class="col-md-12">
             <h3>{{ product.name }}</h3>
         </div>
