--- a/templates/blocks/main_menu.html.twig
+++ b/templates/blocks/main_menu.html.twig
@@ -125,7 +125,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                    aria-expanded="false">Meer<span class="caret"></span>
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="right:0;">
                     {% for category in categories[6:] %}
                         <li>
                             <a href="{{ lang.url.category_products ~ category.id }}">
