--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -19,7 +19,7 @@
             <a href="#" class="fa fa-linkedin"></a>
         </div>
     </div>
-    <div class="col-sm-12 col-xs-12 mb-3 ftrbtm">
+    <div class="col-xs-12 mb-3 ftrbtm">
         <p>© {{ "now"|date('Y') }} - Alle prijzen zijn inclusief BTW - Merknamen zijn alleen gebruikt om de toepasbaarheid van producten aan te geven en dienen verder niet te worden geassocieerd met {{ site_name }}</p>
     </div>
 </footer>
