--- a/templates/layouts/layout.html.twig
+++ b/templates/layouts/layout.html.twig
@@ -37,7 +37,7 @@
 
 <!-- CONTAINER -->
 
-<div id="bodyContent" class="body">
+<div id="bodyContent" class="bodyContent">
     <div id="container" class="{{ container == true ? 'container-fluid' : 'container' }}">
         <!-- Include header.html.twig -->
         {% include 'layouts/header.html.twig' %}
